assets/css/admin.css
/* ... */
.fixed .column-consumer strong {
	display: block;
	font-size: 14px;
	margin-bottom: .2em;
}

/* Taxonomy terms */
.fixed .row-title .status,
.fixed .row-title .status:hover {
	color: #555;
}

/* Metaboxes */

/* WP 5.5+: Cancel flex display because headings may have span.count */
body.incassoos-post-view #poststuff h2.hndle,
body.incassoos-post-edit #poststuff h2.hndle {
	display: block;
}

/* Content Metabox */

body.incassoos-post-view #postdivrich .inside {
	max-width: 600px;
}

/* Notices */

.incassoos-notice p ~ p {
	display: none;
}

.incassoos-notice.open p ~ p {
	display: block;
}

/* Publishing Metabox */

#major-publishing-actions:first-child {
	border: none;
}

#misc-publishing-actions .publishing-notice,
#major-publishing-actions .publishing-notice {
	display: inline-block;
	line-height: 28px;
}

#major-publishing-actions .publishing-notice label {
	margin-right: 4px;
	font-weight: 600;
}

#major-publishing-actions .publishing-notice .value {
	vertical-align: middle;
}

#misc-publishing-actions .publishing-action,
#major-publishing-actions .publishing-action {
	text-align: right;
	float: right;
	line-height: 23px;
}

#major-publishing-actions .button.disabled {
	pointer-events: none;
}

#misc-publishing-actions .publishing-action .spinner,
#major-publishing-actions .publishing-action .spinner {
	float: left;
}

@media screen and (max-width: 782px) {

	#misc-publishing-actions .publishing-action,
	#major-publishing-actions .publishing-action {
		line-height: 47px;
	}

	#misc-publishing-actions .publishing-action .spinner,
	#major-publishing-actions .publishing-action .spinner {
		float: none;
		margin-top: -2px; /* Half of the Collect button's bottom margin. */
	}
}

/* Details Metabox */

.incassoos-post-view #titlediv #title {
	display: inline-block;
	box-sizing: border-box;
	padding: 5px 8px 3px;
	color: #32373c;
	border: 1px solid #e5e5e5;
	font-weight: inherit;
	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
}

.incassoos-post-view #titlediv ~ .meta-box-sortables #postdivrich {
	margin: 17px 0px 0px;
}

.incassoos-object-details p:last-child,
.incassoos-item-list p:last-child,
.incassoos-object-details ul:last-child {
	margin-bottom: 0px;
}

.incassoos-object-details label {
	display: inline-block;
	width: 42%;
	margin-right: -4px;
	padding-right: 8px;
	font-weight: 600;
	vertical-align: top;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	word-wrap: break-word;
}

.incassoos-object-details label + * {
	display: inline-block;
	width: 100%;
	max-width: 58%;
	margin-right: 0px;
	margin-left: 0px;
	vertical-align: top;
}

.incassoos-object-details label + select {
	width: 68%;
}

.incassoos-object-details label + .detail-wrapper select {
	width: 100%;
}

.incassoos-object-details label + .detail-wrapper .separator {
	display: block;
	width: 100%;
	padding: 4px 0px 6px;
	text-align: center;
}

.incassoos-object-details .value span {
	display: block;
}

#major-publishing-actions #collection-total {
	display: inline-block;
	vertical-align: top;
	text-overflow: ellipsis;
	max-width: 110px;
	overflow: hidden;
	white-space: nowrap;
}

.incassoos-object-details .new-value:not(:empty) + .value,
#major-publishing-actions .new-value:not(:empty) + .value {
	margin-left: 4px;
	text-decoration: line-through;
}

#incassoos_collection_details .inside,
#incassoos_activity_details .inside,
#incassoos_occasion_details .inside,
#incassoos_order_details .inside,
#incassoos_product_details .inside,
#incassoos_collection_activities .inside,
#incassoos_collection_occasions .inside,
#incassoos_collection_consumers .inside,
#incassoos_activity_participants .inside,
#incassoos_occasion_products .inside,
#incassoos_occasion_consumers .inside,
#incassoos_order_products .inside {
	margin: 0px;
	padding: 0px;
}

.incassoos-post-view #incassoos_collection_details .incassoos-object-details,
#incassoos_activity_details .incassoos-object-details,
.incassoos-post-view #incassoos_occasion_details .incassoos-object-details,
.incassoos-post-view #incassoos_order_details .incassoos-object-details,
.incassoos-post-view #incassoos_product_details .incassoos-object-details {
	margin: 6px 0px 0px 0px;
}

.incassoos-object-details p,
.incassoos-item-list p {
	padding: 0px 12px 12px;
	margin: 0px;
}

.incassoos-object-details p:first-child,
.incassoos-item-list p:first-child {
	margin: 8px 0px 0px;
}

.incassoos-object-details .warning {
	font-style: italic;
}

.incassoos-post-view .incassoos-object-details label,
.incassoos-post-view .incassoos-item-list label {
	cursor: inherit;
}

#misc-publishing-actions {
	padding: 10px;
	clear: both;
	border-top: 1px solid #ddd;
	background: #fafafa;
}

#misc-publishing-actions .publishing-notice {
	max-width: 50%;
}

#misc-publishing-actions .publishing-notice.require-confirmation,
#misc-publishing-actions .publishing-notice.require-decryption-key {
	max-width: none;
	margin-bottom: 10px;
}

#misc-publishing-actions .publishing-notice .action-confirmation,
#misc-publishing-actions .publishing-notice .action-decryption-key {
	display: none;
}

#misc-publishing-actions .publishing-notice.require-confirmation .action-confirmation,
#misc-publishing-actions .publishing-notice.require-decryption-key .action-decryption-key {
	display: inline-block;
}

#misc-publishing-actions .publishing-notice.require-confirmation .action-confirmation label,
#misc-publishing-actions .publishing-notice.require-decryption-key .action-decryption-key label {
	font-weight: inherit;
}

#misc-publishing-actions .publishing-notice.require-decryption-key .action-decryption-key input {
	text-align: left;
	width: 100%;
}
/* ... */

